--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <!-- Put your site title here -->
   <title>
-    Syed Ali Hussnain | A Web Developer based in Lahore, Pakistan.
+    Muzzammil | Full-Stack Developer.
   </title>
 
   <meta name="description" content="Add small description of yourslef.">
@@ -56,10 +56,10 @@
       <div class="header__text">
         <h1 class="heading-primary">
           <!-- Replace the following name with your name -->
-          <span>Syed Ali Hussnain</span>
+          <span>Muzzammil Shaikh</span>
         </h1>
         <!-- Put a small paragraph about yourself -->
-        <p>A Web Developer based in Lahore, Pakistan.</p>
+        <p>Full Stack Developer.</p>
         <a href="#contact" class="btn btn--pink">Get in touch</a>
       </div>
     </div>
@@ -86,11 +86,17 @@
                 <li>HTML</li>
                 <li>SCSS</li>
                 <li>JavaScript</li>
-                <li>Parcel</li>
+                <li>Node.js</li>
+                <li>Nestjs</li>
+                <li>Angular</li>
+                <li>Css</li>
+                <li>Reactjs</li>
+                <li>Docker</li>
+                <li>Mysql Database</li>
               </ul>
 
               <div class="work__links">
-                <a href="https://nisar.surge.sh" target="_blank" class="link__text">
+                <a href="muzzammil.me" target="_blank" class="link__text">
                   Visit Site <span>&rarr;</span>
                 </a>
                 <a href="https://github.com/nisarhassan12/portfolio" title="View Source Code" target="_blank">
@@ -256,7 +262,7 @@
 
       <!-- If you give me some credit by keeping the below paragraph, will be huge for me 😊 Thanks. -->
       <p>
-        &copy; 2020 - Template designed & developed by <a href="https://nisar.dev" class="link">Nisar</a>.
+        &copy; 2020 - Template designed & developed by <a href="muzzammil.me" class="link">Muzzammil Shaikh</a>.
       </p>
       <div class="footer__github-buttons">
         <iframe
